src/tests/Beginners/ShouldFail/point_virgule_profond.ml
if let x = 2 ;; x+1 then 1 else 0

